2008-07-01  Andrew Haley  <aph@redhat.com>

	* java/lang/Long.java: Comment change only.

2008-07-01  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* java/lang/Long.java (signum): Implemented properly as described
	in Hacker's Delight Section 2-7.

2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/35237:
	* resource/java/util/iso4217.properties:
	Regenerated from CLDR 1.5.1 data.

2008-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36636:
	* tools/gnu/classpath/tools/jar/Updater.java:
	(run(Main)): Check return value of renameTo, and
	create temporary file in same directory (as suggested
	by Tom Tromey).
	(copyFile(File,File)): Removed.

2008-06-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36637:
	* examples/Makefile.am,
	* lib/Makefile.am:
	Use new conditional and $(JAR).
	* m4/acinclude.m4:
	Replace --with-fastjar with a general
	--with-jar check that can be turned off.
	* tools/Makefile.am:
	Use new conditional and $(JAR).

2008-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36636:
	* tools/gnu/classpath/tools/jar/Updater.java:
	(run(Main)): Check return value of renameTo, and
	copy file instead if necessary.
	(copyFile(File,File)): New method to copy a file.
	
2008-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Remove AC_PROG_MKDIR_P.
	* examples/Makefile.am,
	* lib/Makefile.am,
	* tools/Makefile.am:
	Use mkdir_p instead of MKDIR_P.

2008-06-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/36221:
	* gnu/xml/dom/DomAttr.java:
	(DomAttr(DomDocument,String,String,String,String)):
	New constructor.
	* gnu/xml/dom/DomDocument.java:
	(createElement(String)): Use new constructor rather than
	setting variable directly.
	(createAttribute(String)): Likewise.
	* gnu/xml/dom/DomElement.java:
	(DomElement(DomDocument,String,String,String,String)):
	New constructor.
	* gnu/xml/dom/DomNsNode.java:
	(localName): Make private.